--- a/api-depraia/src/main/resources/application.properties
+++ b/api-depraia/src/main/resources/application.properties
@@ -4,4 +4,11 @@ logging.level.org.springframework=ERROR
 spring.datasource.url=jdbc:mysql://localhost:3306/depraia?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+
+# Hibernate
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
