--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/depraia?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=
 
+server.port=${PORT:8080}
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
