--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.url=jdbc:mysql://localhost:3306/depraia?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/depraia?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://xlf3ljx3beaucz9x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/b7pqa2bo2gj7z6kq?useSSL=false&serverTimezone=UTC
+spring.datasource.username=zg1u252pcnrzx7jj
+spring.datasource.password=m6uneole4zn5p1lp
 
 # Hibernate
 
