--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ logging.level.org.springframework=ERROR
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://xlf3ljx3beaucz9x.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/b7pqa2bo2gj7z6kq?useSSL=false&serverTimezone=UTC
-spring.datasource.username=zg1u252pcnrzx7jj
-$spring.datasource.password=m6uneole4zn5p1lp
+spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_ee1f1528fb0472a?reconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=be7858e862e8b4
+$spring.datasource.password=a4cda457
 
 # Hibernate
 
