--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.springframework=ERROR
 #spring.datasource.username=root
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_ee1f1528fb0472a?reconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://www.db4free.net:3306/depraia?reconnect=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=be7858e862e8b4
 $spring.datasource.password=a4cda457
 
