--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.url=jdbc:mysql://www.db4free.net:3306/depraia?reconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_ee1f1528fb0472a?reconnect=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=be7858e862e8b4
 $spring.datasource.password=a4cda457
 
@@ -12,4 +12,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-server.port=8081
+server.port=8080
