--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.url=jdbc:mysql://us-cdbr-east-03.cleardb.com:3306/heroku_ee1f1528fb0472a?reconnect=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=be7858e862e8b4
-$spring.datasource.password=a4cda457
+spring.datasource.url=jdbc:mysql://localhost:3306/dbapi?reconnect=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+$spring.datasource.password=
 
 # Hibernate
 
