--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,23 @@
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
 
-spring.datasource.url=jdbc:mysql://localhost:3306/dbapi?reconnect=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-$spring.datasource.password=
+#spring.datasource.url=jdbc:mysql://localhost:3306/dbapi?reconnect=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#$spring.datasource.password=
 
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# H2 Database in memory
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
