ciclo principal para agendamento

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,12 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
 
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/dbapi?reconnect=true&useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#$spring.datasource.password=
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 server.port=8080
